--- a/.cproject
+++ b/.cproject
@@ -40,6 +40,7 @@
 								<option id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.option.optimization.level.52701399" name="Optimization level" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.option.optimization.level" useByScannerDiscovery="false"/>
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.option.includepaths.36418587" name="Include paths (-I)" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.option.includepaths" useByScannerDiscovery="false" valueType="includePath">
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/${ProjName}/Inc}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/${ProjName}/Drivers/BSP/Components/hts221}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/${ProjName}/Common/Inc}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/${ProjName}/Drivers/CMSIS/Include}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/${ProjName}/Drivers/BSP/B-L475E-IOT01}&quot;"/>
@@ -78,11 +79,11 @@
 							<tool id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.objcopy.symbolsrec.664397687" name="MCU Output Converter Motorola S-rec with symbols" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.objcopy.symbolsrec"/>
 						</toolChain>
 					</folderInfo>
-					<fileInfo id="com.st.stm32cube.ide.mcu.gnu.managedbuild.config.exe.debug.1205377917.549544621" name="system_stm32l4xx.c" rcbsApplicability="disable" resourcePath="Drivers/CMSIS/Device/ST/STM32L4xx/Source/Templates/system_stm32l4xx.c" toolsToInvoke="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.809766751.1864876414">
-						<tool id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.809766751.1864876414" name="MCU GCC Compiler" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.809766751"/>
+					<fileInfo id="com.st.stm32cube.ide.mcu.gnu.managedbuild.config.exe.debug.1205377917.1762241549" name="stm32l475e_iot01_psensor.c" rcbsApplicability="disable" resourcePath="Drivers/BSP/B-L475E-IOT01/stm32l475e_iot01_psensor.c" toolsToInvoke="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.809766751.1682133961">
+						<tool id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.809766751.1682133961" name="MCU GCC Compiler" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.809766751"/>
 					</fileInfo>
 					<sourceEntries>
-						<entry excluding="Drivers/CMSIS/Device/ST/STM32L4xx/Source/Templates/system_stm32l4xx.c|Drivers/BSP/B-L475E-IOT01/stm32l475e_iot01_tsensor.c|Drivers/BSP/B-L475E-IOT01/stm32l475e_iot01_psensor.c|Drivers/BSP/B-L475E-IOT01/stm32l475e_iot01_magneto.c|Drivers/BSP/B-L475E-IOT01/stm32l475e_iot01_hsensor.c|Drivers/BSP/B-L475E-IOT01/stm32l475e_iot01_gyro.c|Drivers/BSP/B-L475E-IOT01/stm32l475e_iot01_qspi.c|Drivers/BSP/B-L475E-IOT01/stm32l475e_iot01_accelero.c|Drivers/CMSIS/Core/Template|Drivers/CMSIS/DSP|Drivers/CMSIS/Device/ST/STM32L4xx/Source/Templates/arm|Drivers/CMSIS/Device/ST/STM32L4xx/Source/Templates/iar|Drivers/CMSIS/NN|Drivers/CMSIS/RTOS2" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+						<entry excluding="Drivers/CMSIS/Device/ST/STM32L4xx/Source/Templates/system_stm32l4xx.c|Drivers/BSP/B-L475E-IOT01/stm32l475e_iot01_magneto.c|Drivers/BSP/B-L475E-IOT01/stm32l475e_iot01_gyro.c|Drivers/BSP/B-L475E-IOT01/stm32l475e_iot01_qspi.c|Drivers/BSP/B-L475E-IOT01/stm32l475e_iot01_accelero.c|Drivers/CMSIS/Core/Template|Drivers/CMSIS/DSP|Drivers/CMSIS/Device/ST/STM32L4xx/Source/Templates/arm|Drivers/CMSIS/Device/ST/STM32L4xx/Source/Templates/iar|Drivers/CMSIS/NN|Drivers/CMSIS/RTOS2" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
@@ -157,6 +158,13 @@
 		</scannerConfigBuildInfo>
 	</storageModule>
 	<storageModule moduleId="org.eclipse.cdt.core.LanguageSettingsProviders"/>
-	<storageModule moduleId="refreshScope"/>
+	<storageModule moduleId="refreshScope" versionNumber="2">
+		<configuration configurationName="Debug">
+			<resource resourceType="PROJECT" workspacePath="/WIFI_TCP_Client"/>
+		</configuration>
+		<configuration configurationName="Release">
+			<resource resourceType="PROJECT" workspacePath="/WIFI_TCP_Client"/>
+		</configuration>
+	</storageModule>
 	<storageModule moduleId="org.eclipse.cdt.make.core.buildtargets"/>
 </cproject>
